--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,7 @@
+# Stage 1: Build the React app
+FROM node:22-alpine as build
 
-
-# Step 1: Build React app using Node
-FROM node:18 AS build
-
-WORKDIR /app
+WORKDIR /usr/src/app
 
 COPY package*.json ./
 RUN npm install
@@ -11,18 +9,14 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Step 2: Serve with Nginx
-FROM nginx:alpine
+# Stage 2: Serve using Nginx
+FROM nginx:1.27-alpine
 
-# Remove default nginx index page
-RUN rm -rf /usr/share/nginx/html/*
+# Copy build output to Nginx folder
+COPY --from=build /usr/src/app/build /usr/share/nginx/html
 
-# Copy build output from React to Nginx public folder
-COPY --from=build /app/build /usr/share/nginx/html
-
-# Copy custom nginx config if needed (optional)
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copy custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
